--- a/themes/m/css/style.css
+++ b/themes/m/css/style.css
@@ -1,3 +1,7 @@
+p.task-number{
+	font-size: 1.3em;
+}
+
 .row{
 	text-align: center;
 }
@@ -8,8 +12,6 @@
 	margin-bottom: 10px;
 	clear: both;
 }
-
-
 
 .item{
 	margin-bottom: 20px;
